Styled HTML shell in css to get basic comp layout

--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
     <title>Static Comp</title>
 </head>
 <body>
+    <div class="grid-container">
+        <div class="top-bar">
+            <!-- <h1 class="win">2Win! -->
+            <!-- <image>logo next to 2win</image> -->
+            <!-- </h1> -->
+            <!-- <p class="shares">SHARES</p> -->
+            <!-- <p class="playlists">PLAYLISTS</p> -->
+            <!-- <p class="personal-videos">PERSONAL VIDEOS</p> -->
+        </div>
 
-    <div class="top-bar">
-        <!-- <h1 class="win">2Win! -->
-        <!-- <image>logo next to 2win</image> -->
-        <!-- </h1> -->
-        <!-- <p class="shares">SHARES</p> -->
-        <!-- <p class="playlists">PLAYLISTS</p> -->
-        <!-- <p class="personal-videos">PERSONAL VIDEOS</p> -->
-    </div>
-
-    <div class="mid-section">
-        <!-- <h2 class="shares-header">SHARES</h2> -->
+        <div class="mid-section">
+            <section class="grid-item grid-item-1"></section>
+            <section class="grid-item grid-item-2"></section>
+            <section class="grid-item grid-item-3"></section>
+            <section class="grid-item grid-item-4"></section>
+            <section class="grid-item grid-item-5"></section>
+            <section class="grid-item grid-item-6"></section>
+            <section class="grid-item grid-item-7"></section>
+            <section class="grid-item grid-item-8"></section>
+        </div>
     </div>
 </body>
 </html>
