Added images and text to top bar & styled per comp

--- a/index.html
+++ b/index.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="normalize.css"> -->
     <title>Static Comp</title>
 </head>
 <body>
     <div class="grid-container">
         <div class="top-bar">
+            <ul>
+                <img src="./src/share.png" width="20" height="20">
+                    <li class="shares" style="display:inline">SHARES</li>
+                <img src="./src/menu-burger.png" width="20" height="20">
+                    <li class="playlists" style="display:inline">PLAYLISTS</li>
+                <img src="./src/user.png" width="20" height="20">
+                    <li class="personal-videos" style="display:inline">PERSONAL VIDEOS</li>
+              </ul>
             <!-- <h1 class="win">2Win! -->
             <!-- <image>logo next to 2win</image> -->
             <!-- </h1> -->
             <!-- <p class="shares">SHARES</p> -->
             <!-- <p class="playlists">PLAYLISTS</p> -->
             <!-- <p class="personal-videos">PERSONAL VIDEOS</p> -->
+        </div>
+
+        <div class="center">
+            <h2>Shares</h2>
         </div>
 
         <div class="mid-section">
