Added text and styling to right side of top bar

--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
     <div class="grid-container">
         <div class="top-bar">
             <ul>
-                <img src="./src/share.png" width="20" height="20">
+                <img src="./src/share.png" alt="shares" width="20" height="20">
                     <li class="shares" style="display:inline">SHARES</li>
-                <img src="./src/menu-burger.png" width="20" height="20">
+                <img src="./src/menu-burger.png" class="playlists-img" alt="playlists" width="20" height="20">
                     <li class="playlists" style="display:inline">PLAYLISTS</li>
-                <img src="./src/user.png" width="20" height="20">
+                <img src="./src/user.png" class="user-img" alt="personal-videos" width="20" height="20">
                     <li class="personal-videos" style="display:inline">PERSONAL VIDEOS</li>
-              </ul>
-            <!-- <h1 class="win">2Win! -->
+            </ul>
+            <aside class="admin">Admin Username
+                <!-- <img src="./src/portrait.png" width="20" height="20"> -->
+                <img src="./src/caret-down.png" width="20" height="20">
+            </aside>
+            <h1 class="win">2Win!
             <!-- <image>logo next to 2win</image> -->
-            <!-- </h1> -->
-            <!-- <p class="shares">SHARES</p> -->
-            <!-- <p class="playlists">PLAYLISTS</p> -->
-            <!-- <p class="personal-videos">PERSONAL VIDEOS</p> -->
+            
         </div>
 
         <div class="center">
