Added and fit image in grid box

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="normalize.css"> -->
     <title>Static Comp</title>
@@ -36,7 +36,13 @@
         </div>
 
         <div class="mid-section">
-            <section class="grid-item grid-item-1"></section>
+            <section class="grid-item grid-item-1">
+                <img src="./src/images/turtle.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p> -->
+
+            </section>
             <section class="grid-item grid-item-2"></section>
             <section class="grid-item grid-item-3"></section>
             <section class="grid-item grid-item-4"></section>
