--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="normalize.css"> -->
+    <link rel="stylesheet" href="normalize.css">
     <title>Static Comp</title>
 </head>
 <body>
     <div class="grid-container">
         <div class="top-bar">
             <ul>
-                <img src="./src/share.png" alt="shares" width="20" height="20">
+                <img src="./src/share.png" class="shares-img" alt="shares" width="20" height="20">
                     <li class="shares" style="display:inline">SHARES</li>
                 <img src="./src/menu-burger.png" class="playlists-img" alt="playlists" width="20" height="20">
                     <li class="playlists" style="display:inline">PLAYLISTS</li>
@@ -40,16 +40,90 @@
                 <img src="./src/images/turtle.jpg" class="turtle" alt="turtle">
                 <h3 class="name-here"><strong>Person's Name</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p> -->
-
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
             </section>
-            <section class="grid-item grid-item-2"></section>
-            <section class="grid-item grid-item-3"></section>
-            <section class="grid-item grid-item-4"></section>
-            <section class="grid-item grid-item-5"></section>
-            <section class="grid-item grid-item-6"></section>
-            <section class="grid-item grid-item-7"></section>
-            <section class="grid-item grid-item-8"></section>
+            <section class="grid-item grid-item-2">
+                <img src="./src/images/starfish.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
+            <section class="grid-item grid-item-3">
+                <img src="./src/images/clownfish.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
+            <section class="grid-item grid-item-4">
+                <img src="./src/images/crab.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
+            <section class="grid-item grid-item-5">
+                <img src="./src/images/crawfish.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
+            <section class="grid-item grid-item-6">
+                <img src="./src/images/fishschool.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
+            <section class="grid-item grid-item-7">
+                <img src="./src/images/jellyfish.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
+            <section class="grid-item grid-item-8">
+                <img src="./src/images/pufferfish.jpg" class="turtle" alt="turtle">
+                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <p class="date">Monday 01/23/16 10:22am</p>
+                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
+                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="box-playlist">PLAYLIST</p>
+                    <p class="box-name-of-playlist">Name of Playlist</p>
+                    <p class="box-attachments">ATTACHMENTS</p>
+                    <p class="box-number">04</p>
+            </section>
         </div>
     </div>
 </body>
