Placed and styled logo for top bar

--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
         <div class="top-bar">
             <ul>
                 <img src="./src/share.png" class="shares-img" alt="shares" width="20" height="20">
-                    <li class="shares" style="display:inline">SHARES</li>
+                    <li class="shares" style="display:inline">SWIMMING THINGS</li>
                 <img src="./src/menu-burger.png" class="playlists-img" alt="playlists" width="20" height="20">
-                    <li class="playlists" style="display:inline">PLAYLISTS</li>
+                    <li class="playlists" style="display:inline">FOOD JUNK</li>
                 <img src="./src/user.png" class="user-img" alt="personal-videos" width="20" height="20">
-                    <li class="personal-videos" style="display:inline">PERSONAL VIDEOS</li>
+                    <li class="personal-videos" style="display:inline">SURVIVAL JARGON</li>
             </ul>
             <aside class="admin">Admin Username
                 <!-- <img src="./src/portrait.png" width="20" height="20"> -->
                 <img src="./src/caret-down.png" width="20" height="20">
             </aside>
-            <h1 class="win">2Win!
-            <!-- <image>logo next to 2win</image> -->
+            <h1 class="win">Ocean Stuff!
+                <img src="./src/icons/water.png" class="water-img" alt="water">
+            </h1>
             
         </div>
 
         <div class="center">
-            <h2>Shares</h2>
+            <h2>Swimming Things</h2>
         </div>
 
         <div class="mid-section">
