styled link address within the grid boxes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./src/share.png" class="shares-img" alt="shares" width="20" height="20">
                     <li class="shares" style="display:inline">SWIMMING THINGS</li>
                 <img src="./src/menu-burger.png" class="playlists-img" alt="playlists" width="20" height="20">
-                    <li class="playlists" style="display:inline">FOOD JUNK</li>
+                    <li class="playlists" style="display:inline">FOOD GOODS</li>
                 <img src="./src/user.png" class="user-img" alt="personal-videos" width="20" height="20">
                     <li class="personal-videos" style="display:inline">SURVIVAL JARGON</li>
             </ul>
@@ -39,10 +39,12 @@
         <div class="mid-section">
             <section class="grid-item grid-item-1">
                 <img src="./src/images/turtle.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                    <!-- <p class="image-views" >Views</p>
+                    <p class="image-views-number">02</p> -->
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -50,10 +52,10 @@
             </section>
             <section class="grid-item grid-item-2">
                 <img src="./src/images/starfish.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -61,10 +63,10 @@
             </section>
             <section class="grid-item grid-item-3">
                 <img src="./src/images/clownfish.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -72,10 +74,10 @@
             </section>
             <section class="grid-item grid-item-4">
                 <img src="./src/images/crab.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -83,10 +85,10 @@
             </section>
             <section class="grid-item grid-item-5">
                 <img src="./src/images/crawfish.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -94,10 +96,10 @@
             </section>
             <section class="grid-item grid-item-6">
                 <img src="./src/images/fishschool.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -105,10 +107,10 @@
             </section>
             <section class="grid-item grid-item-7">
                 <img src="./src/images/jellyfish.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
@@ -116,10 +118,10 @@
             </section>
             <section class="grid-item grid-item-8">
                 <img src="./src/images/pufferfish.jpg" class="turtle" alt="turtle">
-                <h3 class="name-here"><strong>Person's Name</strong></h3>
+                <h3 class="name-here"><strong>Sea Creature's Name Here</strong></h3>
                     <p class="date">Monday 01/23/16 10:22am</p>
-                <!-- <h4 class="link">http://2win.2winstage.com/p/recipients_namehere</h4> -->
-                    <!-- <p class="link">http://2win.2winstage.com/p/recipients_namehere</p>                -->
+                    <p class="link1">http://oceanstuff.com/s_t/sea_cr-</p>
+                    <p class="link2">eatures_name_here</p>
                     <p class="box-playlist">PLAYLIST</p>
                     <p class="box-name-of-playlist">Name of Playlist</p>
                     <p class="box-attachments">ATTACHMENTS</p>
