Refactored css styling & html

--- a/index.html
+++ b/index.html
@@ -15,28 +15,24 @@
     <div class="grid-container">
         <div class="top-bar">
             <ul>
-                <img src="./src/share.png" class="shares-img" alt="shares" width="20" height="20">
-                    <li class="shares" style="display:inline">SWIMMING THINGS</li>
-                <img src="./src/menu-burger.png" class="playlists-img" alt="playlists" width="20" height="20">
-                    <li class="playlists" style="display:inline">FOOD GOODS</li>
-                <img src="./src/user.png" class="user-img" alt="personal-videos" width="20" height="20">
-                    <li class="personal-videos" style="display:inline">SURVIVAL JARGON</li>
+                <img src="./src/share.png" class="swimming-things-img" alt="swimming-things-icoj">
+                    <li class="swimming-things" style="display:inline">SWIMMING THINGS</li>
+                <img src="./src/menu-burger.png" class="food-goods-img" alt="food-goods-icon">
+                    <li class="food-goods" style="display:inline">FOOD GOODS</li>
+                <img src="./src/user.png" class="survival-stories-img" alt="survival-stories-icon">
+                    <li class="survival-stories" style="display:inline">SURVIVAL STORIES</li>
             </ul>
             <aside class="admin">Admin Username
-                <!-- <img src="./src/portrait.png" width="20" height="20"> -->
-                <img src="./src/caret-down.png" width="20" height="20">
+                <img src="./src/caret-down.png" class="admin-user" alt="admin-username">
             </aside>
-            <h1 class="win">Ocean Stuff!
+            <h1>Ocean Stuff!
                 <img src="./src/icons/water.png" class="water-img" alt="water">
             </h1>
-            
         </div>
-
         <div class="center">
             <h2>Swimming Things</h2>
         </div>
-
-        <div class="mid-section">
+        <div class="grid-section">
             <section class="grid-item grid-item-1">
                 <img src="./src/images/turtle.jpg" class="turtle" alt="turtle">
                     <!-- <p class="image-views" >Views</p>
