Removed duplicate icon files and adjusted file paths in HTML

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div class="grid-container">
         <div class="top-bar">
             <ul>
-                <img src="./src/share.png" class="swimming-things-img" alt="swimming-things-icoj">
+                <img src="./src/icons/share.png" class="swimming-things-img" alt="swimming-things-icoj">
                     <li class="swimming-things" style="display:inline">SWIMMING THINGS</li>
-                <img src="./src/menu-burger.png" class="food-goods-img" alt="food-goods-icon">
+                <img src="./src/icons/menu-burger.png" class="food-goods-img" alt="food-goods-icon">
                     <li class="food-goods" style="display:inline">FOOD GOODS</li>
-                <img src="./src/user.png" class="survival-stories-img" alt="survival-stories-icon">
+                <img src="./src/icons/user.png" class="survival-stories-img" alt="survival-stories-icon">
                     <li class="survival-stories" style="display:inline">SURVIVAL STORIES</li>
             </ul>
             <aside class="admin">Admin Username
-                <img src="./src/caret-down.png" class="admin-user" alt="admin-username">
+                <img src="./src/icons/caret-down.png" class="admin-user" alt="admin-username">
             </aside>
             <h1>Ocean Stuff!
                 <img src="./src/icons/water.png" class="water-img" alt="water">
